# shape

./: Cargo.toml  README.md  justfile
.github/workflows/: build.yml  coverage.yml  test.yml
crates/shape/: Cargo.toml
crates/shape-macros/: Cargo.toml
crates/shape-macros/src/: attr.rs  lib.rs
crates/shape/src/: is_assignable.rs  lib.rs  main.rs  to_typescript.rs
crates/shape/tests/: array_containers.rs  containers.rs  generics.rs  inflection_enum.rs  inflection_struct.rs  integration.rs  is_assignable.rs  maps.rs  misc.rs  options.rs  rename_ser_de.rs  serde_from_into.rs  serde_serialize_always_assignble.rs  simple.rs  struct.rs  to_typescript.rs  tuple.rs  tuple_skip.rs  tuple_struct.rs
crates/shape/tests/common/: mod.rs
