[package]
name = "shape"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
indexmap = "2.6.0"
serde_json = "1.0.133"
shape-macros = { path = "../shape-macros" }

[dev-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
text-diff = "0.4.0"
