[package]
name = "shape"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.6.0"
serde_json = "1.0.133"
shape-macros = { path = "../shape-macros" }
compact_str = { version = "0.8", optional = true }
time = { version = "0.3.37", optional = true }

[features]
compact-str-0_8 = ["dep:compact_str"]
time-0_3 = ["dep:time"]

[dev-dependencies]
regex = "1.11.1"
regex_static = "0.1.1"
serde = { version = "1.0.215", features = ["derive"] }
text-diff = "0.4.0"
