[package]
name = "shape"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.6.0" }
serde_json = "1.0.133"
shape-macros = { path = "../shape-macros" }
compact_str = { version = "0.8", optional = true }
time = { version = "0.3.37", optional = true }
intmap = { version = "3.1.0", optional = true }
inttable = { version = "0.1.0", optional = true }
ordered-float = { version = "4.6.0", optional = true }
bson = { version = "2.13.0", optional = true }

[features]
compact-str-0_8 = ["dep:compact_str"]
time-0_3 = ["dep:time"]
intmap = ["dep:intmap"]
inttable = ["dep:inttable"]
ordered-float = ["dep:ordered-float"]
bson = ["dep:bson"]
indexmap = []

[dev-dependencies]
regex = "1.11.1"
regex_static = "0.1.1"
serde = { version = "1.0.215", features = ["derive"] }
text-diff = "0.4.0"
